# peano-axioms

./: Cargo.toml  README.md
src/: div.rs  fraction.rs  gcd.rs  lib.rs  test.rs
