[package]
name = "peano-axioms"
version = "0.1.0"
edition = "2021"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

expect_used = "forbid"
inline_always = "allow"
missing_inline_in_public_items = "warn"
panic = "forbid"
todo = "forbid"
unimplemented = "forbid"
unreachable = "forbid"
unwrap_used = "forbid"
use_self = "allow"
