[package]
name = "peano-axioms"
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "docs.rs/peano-axioms"
repository = "https://github.com/Spartan2909/peano-axioms"

[dependencies]
local-type-alias = "0.1.4"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

expect_used = "forbid"
inline_always = "allow"
missing_inline_in_public_items = "warn"
module_name_repetitions = "allow"
panic = "forbid"
redundant_pub_crate = "allow"
todo = "forbid"
unimplemented = "forbid"
unreachable = "forbid"
unwrap_used = "forbid"
use_self = "allow"
